# alamgu-example

./: Cargo.nix  crate-hashes.json  default.nix  speculos-wrapper
.cargo/: config
.github/workflows/: build_and_functional_tests.yml  functional_tests.yml  rust.yml
dep/alamgu/: github.json
rust-app/: Cargo.toml  build.rs  rust-toolchain.toml
rust-app/bin-src/: main.rs  main_nanos.rs
rust-app/src/: implementation.rs  interface.rs  lib.rs  main_nanos.rs  state.rs  test_parsers.rs  utils.rs
rust-app/tests/: ts-tests.rs
ts-tests/: basic_tests.ts  package-lock.json
