[package]
name = "rust-app"
version = "0.0.1"
authors = ["jonored", "yhql"]
edition = "2018"
autobins = false
resolver = "2"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-parser-combinators = "*"
ledger-log = "*"
ledger-crypto-helpers = "*"
zeroize = { version = "1.5.2", default-features = false }

# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable
# speculos logging and change log level.
[features]
default = [ ]
# Pass --features speculos,ledger-log/log_info (or log_trace, etc) to enable speculos logging and change log level.
speculos = [ "nanos_sdk/speculos", "ledger-log/speculos", "ledger-log/log_error", "ledger-parser-combinators/logging" ]
extra_debug = ["ledger-log/log_trace"]

[target.thumbv6m-none-eabi.dependencies]
nanos_sdk = "*"
nanos_ui = "*"
ledger-prompts-ui = "*"

[target.thumbv6m-none-eabi.dev-dependencies.nanos_sdk]
version = "*"
features = [ "speculos" ]

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro" }

[[bin]]
name = "rust-app"
test = false
path = "bin-src/main.rs"

[patch.crates-io]
ledger-parser-combinators = { git = "https://github.com/alamgu/ledger-parser-combinators", branch = "patchable" }
nanos_sdk = { git = "https://github.com/alamgu/ledger-nanos-sdk", branch = "use-ambient-compiler-and-target" }
ledger-crypto-helpers = { git = "https://github.com/alamgu/ledger-crypto-helpers", branch = "patchable" }
ledger-log = { git = "https://github.com/alamgu/ledger-log", branch = "patchable" }
nanos_ui = { git = "https://github.com/obsidiansystems/ledger-nanos-ui", branch = "patchable" }
enum-init = { git = "https://github.com/alamgu/enum-init" }
ledger-prompts-ui = { git = "https://github.com/alamgu/ledger-prompts-ui", branch = "patchable" }

[package.metadata.nanos]
name = "Rust App"
path = "44'/535348'"
curve = "ed25519"
flags = "0"
icon = "crab.gif"
